Position of response definitions relative to definitions list. Issues with drop caps on front page and r-d width on mobile.

--- a/site/web/app/themes/immaterial/assets/styles/common/_global.scss
+++ b/site/web/app/themes/immaterial/assets/styles/common/_global.scss
@@ -68,10 +68,6 @@ body { scroll-behavior: smooth; }
   max-width:83%;
 }
 
-.text-list {
-  margin: 1em 0;
-}
-
 @media (min-width: 480px) {
   .response-definition {
     //margin-left: -3.1rem;
