--- a/site/web/app/themes/immaterial/assets/styles/common/_typography.scss
+++ b/site/web/app/themes/immaterial/assets/styles/common/_typography.scss
@@ -4,12 +4,19 @@ p {
   }
 
 ol, ul {
-    //list-style-type: none;
-    text-align: left;
-    line-height: 1.4rem;
-    list-style: none;
-    padding-left:0;
-  }
+  //list-style-type: none;
+  text-align: left;
+  line-height: 1.4rem;
+  list-style: none;
+}
+
+.text-list {
+  margin: 1em 0;
+}
+
+ul.text-list, ol.text-list{
+  padding-left:0;
+}
 
 .entry-content, .entry-data {
   p {
